<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joffry.wifiduino.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/T_IP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/ip" />

            <EditText
                android:id="@+id/EText_IP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="192.168.1.201"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/T_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/port" />

            <EditText
                android:id="@+id/EText_Port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:ems="5"
                android:gravity="end"
                android:inputType="textPersonName"
                android:text="3333"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/B_Connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_fulmine"
                android:text="@string/connect"
                android:textAllCaps="false" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="?android:attr/dividerHorizontal" />
            <ImageButton
                android:id="@+id/B_DisConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_fulminered"
                android:text="@string/disconnect"
                android:textAllCaps="false" />
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="?android:attr/dividerHorizontal" />

            <RadioGroup
                android:id="@+id/radioGroupTCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/RB_TCPon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/tcp_on"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/RB_TCPoff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tcp_off"
                    android:textSize="12sp"
                    android:buttonTint="@android:color/darker_gray" />
            </RadioGroup>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="?android:attr/dividerHorizontal" />

            <RadioGroup
                android:id="@+id/radioGroupUPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/RB_UDPon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/udp_on"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/RB_UDPoff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/udp_off"
                    android:textSize="12sp"
                    android:buttonTint="@android:color/darker_gray" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testo_ricevuto" />

            <TextView
                android:id="@+id/TV_RCV"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:background="@drawable/border"
                android:elevation="0dp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/ET_Send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="textPersonName" />

            <ImageButton
                android:id="@+id/B_Send"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:background="@mipmap/ic_send"
                android:elevation="0dp"
                android:scaleType="fitCenter"
                android:text="@string/send"
                android:textAllCaps="false"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
